[gd_scene load_steps=2 format=3 uid="uid://cofscfaehy0oc"]

[ext_resource type="Script" path="res://scenes/ui/region_detais/region_details.gd" id="1_netc5"]

[node name="RegionDetails" type="GridContainer"]
theme_override_constants/h_separation = 50
columns = 2
script = ExtResource("1_netc5")

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Faction:"

[node name="faction" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Nation:"

[node name="nation" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "adsasd"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Region Title:
"

[node name="region" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Morgul"

[node name="Label4" type="Label" parent="."]
layout_mode = 2
text = "Region Type:
"

[node name="type" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label5" type="Label" parent="."]
layout_mode = 2
text = "Capture Points:"

[node name="capture_points" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label9" type="Label" parent="."]
layout_mode = 2
text = "Defensive Bonus:"

[node name="defensive_bonus" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label7" type="Label" parent="."]
layout_mode = 2
text = "Allows Recruitements:"

[node name="allows_recruitements" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label11" type="Label" parent="."]
layout_mode = 2
text = "Leaders In Reserves:"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="leader_count" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="leader_recruit" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Rectruit"

[node name="Label13" type="Label" parent="."]
layout_mode = 2
text = "Elites In Reserves:"

[node name="elite_count" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label15" type="Label" parent="."]
layout_mode = 2
text = "Regulars In Reserves:"

[node name="regular_count" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/leader_recruit" to="." method="_on_leader_recruit_pressed"]
